# Physeks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scratch.cpp
Example/: CMakeLists.txt  gravity.cpp  particles.cpp
Example/include/: canvas.h
include/physeks/: bodies.hpp  core.hpp  force.hpp  geometry.hpp  physeks.hpp  vec2.hpp
src/: bodies.cpp  core.cpp  geometry.cpp  vec2.cpp
